fix ff bad img alignment

--- a/vectorEditor/style.css
+++ b/vectorEditor/style.css
@@ -12,8 +12,8 @@ button {
 	border-width: 1px;
 	-moz-border-radius: 5px;
   border-radius: 5px;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   vertical-align: middle;
 }
 
